 - GBA: Better cheat type autodetection
 - GB: Tile viewer
 - Sprite viewer
 - Debugging console
 - Improved memory viewer
 - GB: LR35902/GB-Z80 disassembler
 - Configuration of gamepad hats
 - Qt: Spanish translation (by Kevin López)
 - Add option for whether rewinding restores save games
 - Qt: German translation (by Lothar Serra Mari)
 - Savestates now contain any RTC override data
Bugfixes:
 - LR35902: Fix core never exiting with certain event patterns
 - GB Timer: Improve DIV reset behavior
 - GBA Memory: Improve initial skipped BIOS state
 - GBA BIOS: Implement BitUnPack
 - ARM7: Fix MLA/*MULL/*MLAL timing
 - GBA: Fix multiboot ROM loading
 - Libretro: Fix saving in GB games (fixes mgba.io/i/486)
 - LR35902: Fix pc overflowing current region off-by-one
 - GB MBC: Fix ROM bank overflows getting set to bank 0
 - Qt: Fix timing issues on high refresh rate monitors
 - GBA Savedata: Fix savedata unmasking (fixes mgba.io/i/441)
 - Util: Fix overflow when loading invalid UPS patches
 - Tools: Fix recurring multiple times over the same library
 - GBA I/O: Handle audio registers specially when deserializing
 - Util: Fix highest-fd socket not being returned by SocketAccept
 - Qt: Fix linking after some windows have been closed
 - GBA Video: Fix wrong palette on 256-color sprites in OBJWIN
 - Windows: Fix VDir.rewind
 - SDL: Fix game crash check
 - SDL: Fix race condition with audio thread when starting
 - GB: Fix flickering when screen is strobed quickly
 - FFmpeg: Fix overflow and general issues with audio encoding
 - Qt: Fix crash when changing audio settings after a game is closed
Misc:
 - SDL: Remove scancode key input
 - GBA Video: Clean up unused timers
 - Test: Add a basic test suite
 - GBA Video: Allow multiple handles into the same tile cache
 - VFS: Call msync when syncing mapped data
 - GBA Video, GB Video: Colors are now fully scaled
 - VFS: Allow truncating memory chunk VFiles
 - Debugger: Modularize CLI debugger
 - Core: Clean up some thread state checks